--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -422,8 +422,20 @@
                           <object class="GtkStackPage">
                             <property name="name">empty</property>
                             <property name="child">
-                              <object class="AdwStatusPage">
-                                <property name="icon-name">list-symbolic</property>
+                              <object class="AdwToolbarView">
+                                <child type="top">
+                                  <object class="AdwHeaderBar">
+                                    <child type="title">
+                                      <object class="AdwWindowTitle">
+                                      </object>
+                                    </child>
+                                  </object>
+                                </child>
+                                <property name="content">
+                                  <object class="AdwStatusPage">
+                                    <property name="icon-name">list-symbolic</property>
+                                  </object>
+                                </property>
                               </object>
                             </property>
                           </object>
